247315 Add SDO SRG test suite 247335 Add MOXy SRG test suite